Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-04-18 (SVN):
    * pr_cmds.c: Removed remnants of client-only and already commented
      out code.

2012-04-10 (SVN):
    * A lot of documentation updates and clean-ups.

2012-04-09 (SVN):
    * gl_draw.c (Draw_TextureMode_f, Draw_Anisotropy_f): Some micro
      optimization: Simply use the cvar pointer passed to the function
      instead of specifically referencing gl_texture_anisotropy or
      gl_texturemode specifically.

2012-04-09 (SVN):
    * gl_vidsdl.c, gl_vidnt.c: Bound non-power-of-two textures support
      to a newly added cvar gl_texture_NPOT, disabled by default. Fixes
      serious framerate drop on old graphics hardware which the driver
      is lying about its GL_ARB_texture_non_power_of_two capability.
      Mac OS X with ATI R300 to R500 series graphics cards is well known:
      http://lists.apple.com/archives/mac-opengl/2006/Dec/msg00000.html
      http://lists.apple.com/archives/mac-opengl/2009/Oct/msg00040.html
      http://www.idevgames.com/forums/printthread.php?tid=3814&page=2
      MH says NVIDIA once did the same with their GeForce FX on Windows:
      http://forums.inside3d.com/viewtopic.php?f=10&t=4832
      Identifying and blacklisting each and every problematic driver is
      virtually impossible, hence the cvar solution.
    * gl_draw.c: Added Draw_ReinitTextures() as a cvar callback function
      for gl_texture_NPOT.
    * menu.c: Added menu item to change the setting as desired.
    * updated version date stamp to 2012-04-09.

2012-04-08 (SVN):
    * snd_dma.c (S_UpdateAmbientSounds): No ambients when disconnected.

2012-04-08 (SVN):
    * hexen2/client.h (cactive_t): For hexenworld compatibility, added
      ca_active as an alias to ca_connected.

2012-04-08 (SVN):
    * Moved extern declaration of Mod_ReloadTextures() to gl_model.h.

2012-04-07 (SVN):
    * Bumped the version to 1.5.3 in the development tree.

2012-04-04 (SVN):